--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+/** @format */
+
 .App {
   text-align: center;
 }
-
+body {
+  font-family: "futura-pt", sans-serif;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
